--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ewerton Matheus | FullStack Developer Junior</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -96,30 +97,6 @@
     <p>&copy; 2025 Ewerton Matheus. Todos os direitos reservados.</p>
 </footer>
 
-<script>
-    const sections = document.querySelectorAll('section');
-    const observer = new IntersectionObserver(entries => {
-        entries.forEach(entry => {
-            if (entry.isIntersecting) {
-                entry.target.classList.add('active');
-            }
-        });
-    }, { threshold: 0.1 });
-
-    sections.forEach(section => {
-        observer.observe(section);
-    });
-
-    document.body.style.opacity = 0;
-    window.addEventListener('load', () => {
-        document.body.style.opacity = 1;
-    });
-
-    function toggleMenu() {
-        const menu = document.getElementById('menu');
-        menu.classList.toggle('active');
-    }
-</script>
-
+<script src="./assets/js/script.js"></script>
 </body>
 </html>
