Novas estilizações de CSS e JS

--- a/index.html
+++ b/index.html
@@ -43,25 +43,25 @@
 
     <section id="projetos">
         <h3>Projetos</h3>
-        <div class="grid">
+        <div class="carousel">
             <div class="card">
                 <h4>Projeto 1</h4>
-                <p>Descrição breve do projeto, tecnologias utilizadas e objetivo.</p>
+                <p>Descrição breve do projeto.</p>
             </div>
             <div class="card">
                 <h4>Projeto 2</h4>
-                <p>Descrição breve do projeto, tecnologias utilizadas e objetivo.</p>
+                <p>Descrição breve do projeto.</p>
             </div>
             <div class="card">
                 <h4>Projeto 3</h4>
-                <p>Descrição breve do projeto, tecnologias utilizadas e objetivo.</p>
+                <p>Descrição breve do projeto.</p>
             </div>
         </div>
     </section>
 
     <section id="certificacoes">
         <h3>Certificações</h3>
-        <div class="grid">
+        <div class="carousel">
             <div class="card">
                 <h4>Certificação 1</h4>
                 <p>Instituição • Ano</p>
@@ -79,7 +79,7 @@
 
     <section id="contato">
         <h3>Contato</h3>
-        <form action="https://formsubmit.co/seuemail@exemplo.com" method="POST">
+        <form action="https://formsubmit.co/ewertonm455@gmail.com" method="POST">
             <input type="text" name="name" placeholder="Seu nome" required>
             <input type="email" name="email" placeholder="Seu email" required>
             <textarea name="message" rows="5" placeholder="Sua mensagem" required></textarea>
